--- a/index.html
+++ b/index.html
@@ -13,15 +13,66 @@
 </body>
 <script type="text/v-shader">
   attribute vec3 pos;
+  
+  mat3 rotate(float angle, vec3 dir)
+{
+  float sin = sin(radians(angle)),
+        cos = cos(radians(angle));
+  if(dir.x == 1.0)
+  {
+    return mat3(
+      1, 0, 0,
+      0, cos, -sin,
+      0, sin, cos
+    );
+  }
+  else if(dir.y == 1.0)
+  {
+    return mat3(
+      cos, 0, sin,
+      0, 1, 0,
+      -sin, 0, cos
+    );
+  }
+  else if(dir.z == 1.0)
+  {
+    return mat3(
+      cos, -sin, 0,
+      sin, cos, 0,
+      0, 0, 1
+    );
+  }
+  else
+  {
+    return mat3(
+      1, 0, 0,
+      0, 1, 0,
+      0, 0, 1
+      );
+  }
+}
+  vec3 posn;
   void main(void)
   {
-    gl_Position = vec4(pos, 10.0);
+    posn = pos * rotate(10.0, vec3(0, 0, 1));
+    gl_Position = vec4(posn, 10.0);
   }
 </script>
 <script type="text/f-shader">
+precision highp float;
+vec3 greyscale(vec3 x)
+{
+  float grey = (x.r + x.g + x.b) / 3.0;
+  x.r = grey;
+  x.b = grey;
+  x.g = grey;
+  return x;
+}
   void main(void)
   {
-    gl_FragColor = vec4(1.0, 0.0, 0.0, 1.0);
+    vec3 color = vec3(1.0, 0.0, 0.0);
+    vec3 grey = greyscale(color);
+    gl_FragColor = vec4(grey, 1.0);
   }
 </script>
 <script src="basicCube.json"></script>
