--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Window</title>
 </head>
 <body>
-  <canvas>
-    
-  </canvas>
+  <canvas></canvas>
 </body>
 <script type="text/v-shader">
   attribute vec3 pos;
@@ -90,6 +88,6 @@ void main(void)
 }
 </script>
 <script src="texCube.json"></script>
-<script src="glBaseFunctions.js" type="text/javascript" charset="utf-8"></script>
-<script src="main.js" type="text/javascript" charset="utf-8"></script>
+<script src="./Lib/glx.js" type="text/javascript" charset="utf-8"></script>
+<script src="./main.js" type="text/javascript" charset="utf-8"></script>
 </html>
