--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <title>Window</title>
 </head>
 <body>
-  <input type="text" id="fptxt">
+  <input type="text" id="fptxt" readonly>
 </body>
+<script src="./texCube.json"></script>
 <script type="text/v-shader">
+  // data passed from obj builder
   attribute vec3 pos;
   attribute vec2 texpos;
+  attribute vec3 norm;
+  
   uniform vec3 translate;
   uniform vec2 angle;
   uniform mat4 projection;
@@ -53,44 +57,61 @@
         );
     }
   }
-  vec3 posn;
+  
+  // to be passed to fragment
   varying vec2 texCoord;
+  varying vec3 normal;
+  varying vec4 fpos;
+ 
   void main(void)
   {
-    posn = pos * rotate(angle.x, vec3(1, 0, 0));
+    vec3 posn = pos * rotate(angle.x, vec3(1, 0, 0));
     posn = posn * rotate(angle.y, vec3(0, 1, 0));
-    gl_Position = (vec4(posn, 30.0) + vec4(translate, 0.0)) * projection;
+    fpos = vec4(posn, 1.0);
+    gl_Position = (fpos + vec4(translate, 0.0)) * projection;
+    
+    // copy values to be passed
+    normal = norm * rotate(angle.x, vec3(1, 0, 0)) * rotate(angle.y, vec3(0, 1, 0));
     texCoord = texpos;
   }
 </script>
 <script type="text/f-shader">
-precision highp float;
+  precision highp float;
 
-vec3 greyscale(vec3 x)
-{
-  float grey = (x.r + x.g + x.b) / 3.0;
-  x.r = x.b = x.g = grey;
-  return x;
-}
-
-vec3 negative(vec3 x)
-{
-  x.r = 1.0-x.r;
-  x.g = 1.0-x.g;
-  x.b = 1.0-x.b;
-  return x;
-}
-
-uniform sampler2D texture;
-varying vec2 texCoord;
-void main(void)
-{
-  vec4 color = texture2D(texture, texCoord);
-  vec4 processed = vec4(greyscale(color.rgb), color.a);
-  gl_FragColor = processed;
-}
+  vec3 greyscale(vec3 x)
+  {
+    float grey = (x.r + x.g + x.b) / 3.0;
+    x.r = x.b = x.g = grey;
+    return x;
+  }
+  
+  vec3 negative(vec3 x)
+  {
+    x.r = 1.0-x.r;
+    x.g = 1.0-x.g;
+    x.b = 1.0-x.b;
+    return x;
+  }
+  
+  uniform sampler2D texture;
+  varying vec2 texCoord;
+  varying vec3 normal;
+  varying vec4 fpos;
+  
+  vec3 lpos = vec3(1.0, 1.0, -1.0) * 6.0;
+  vec3 lcolor = vec3(1.0, 1.0, 1.0);
+  vec3 ambient = vec3(0.2, 0.2, 0.2);
+  void main(void)
+  {
+    vec4 color = texture2D(texture, texCoord);
+    
+    // calculate dot of lpos and position
+    float dot = max(dot(normalize(lpos - fpos.rgb), normal), 0.0);
+    // calculate light and shading
+    vec3 outColor = (lcolor * color.rgb * dot) + (ambient * color.rgb);
+    gl_FragColor = vec4(outColor, color.a);
+  }
 </script>
-<script src="texCube.json"></script>
 <script src="./Lib/glx.js" type="text/javascript" charset="utf-8"></script>
 <script src="./main.js" type="text/javascript" charset="utf-8"></script>
 </html>
