--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
  
   void main(void)
   {
-    vec3 posn = pos * rotate(angle.x, vec3(1, 0, 0));
-    posn = posn * rotate(angle.y, vec3(0, 1, 0));
-    fpos = vec4(posn, 1.0);
-    gl_Position = (fpos + vec4(translate, 0.0)) * projection;
+    vec3 posn = pos + vec3(translate);
+    posn = posn * rotate(angle.y, vec3(0, 1, 0)) * rotate(angle.x, vec3(1, 0, 0));
+    gl_Position = vec4(posn, 1.0) * projection;
     
     // copy values to be passed
-    normal = norm * rotate(angle.x, vec3(1, 0, 0)) * rotate(angle.y, vec3(0, 1, 0));
+    normal = norm * rotate(angle.y, vec3(0, 1, 0)) * rotate(angle.x, vec3(1, 0, 0));
     texCoord = texpos;
+    fpos = gl_Position;
   }
 </script>
 <script type="text/f-shader">
@@ -98,7 +98,7 @@
   varying vec3 normal;
   varying vec4 fpos;
   
-  vec3 lpos = vec3(1.0, 1.0, -1.0) * 6.0;
+  vec3 lpos = vec3(6.0, 6.0, -6.0);
   vec3 lcolor = vec3(1.0, 1.0, 1.0);
   vec3 ambient = vec3(0.2, 0.2, 0.2);
   void main(void)
